--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/survey.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://materialdesignicons.com/cdn/light/0.2.63/">
-    <title>Vite App</title>
+    <title>Surver APP</title>
   </head>
   <body>
     <div id="app"></div>
